# breakpoint

./: .gitignore  CHANGELOG.md  LICENSE  README.md  break-point.cabal  breakpoint.cabal  shell.nix
.github/workflows/: ci.yml  haskell-ci.yml
app/: Main.hs
bp/: Main.hs
cbits/: breakpoint.c
play/: Main.hs
src/Debug/: BreakPoint.hs  Breakpoint.hs
src/Debug/BreakPoint/: GhcFacade.hs
src/Debug/Breakpoint/: GhcFacade.hs  Renamer.hs  TimerManager.hs  TypeChecker.hs
src/Debug/Breakpoint/TimerManager/: Names.hs
test/: ApplicativeDo.hs  OverloadedStrings.hs  Spec.hs
