cabal-version:      3.0
name:               break-point
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Aaron Allen
maintainer:         aaronallen8455@gmail.com

-- A copyright notice.
-- copyright:
category:           Development
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Debug.BreakPoint,
                      Debug.BreakPoint.GhcFacade

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0,
                      syb,
                      ghc,
                      containers,
                      mtl,
                      transformers
    hs-source-dirs:   src
    default-language: Haskell2010

executable break-point
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.1.0,
        break-point

    hs-source-dirs:   app
    default-language: Haskell2010
