cabal-version:      3.0
name:               breakpoint
version:            0.1.0.0
synopsis:
  Set breakpoints using a GHC plugin

description:
  A plugin that allows you to set breakpoints for debugging purposes.

  See the [README](https://github.com/aaronallen8455/breakpoint#breakpoint) for details.

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Aaron Allen
maintainer:         aaronallen8455@gmail.com
tested-with: GHC==9.2.2, GHC==9.0.2, GHC==8.10.7
bug-reports: https://github.com/aaronallen8455/breakpoint/issues

-- A copyright notice.
-- copyright:
category:           Development
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Debug.Breakpoint,
                      Debug.Breakpoint.GhcFacade

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14.0.0 && <4.17.0.0,
                      ghc,
                      containers,
                      mtl,
                      transformers,
                      haskeline
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall
                 -Wno-unticked-promoted-constructors

test-suite spec
  main-is: Spec.hs
  other-modules: ApplicativeDo
  hs-source-dirs: test
  build-depends: base, tasty, tasty-hunit, breakpoint, containers
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options: -fplugin Debug.Breakpoint
