cabal-version:      3.0
name:               breakpoint
version:            0.1.4.0
synopsis:
  Set breakpoints using a GHC plugin

description:
  A plugin that allows you to set breakpoints for debugging purposes.

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Aaron Allen
maintainer:         aaronallen8455@gmail.com
tested-with: GHC==9.10.1, GHC==9.8.1, GHC==9.6.1, GHC==9.4.2
bug-reports: https://github.com/aaronallen8455/breakpoint/issues

-- A copyright notice.
-- copyright:
category:           Development
extra-source-files: CHANGELOG.md
extra-doc-files: README.md

library
    exposed-modules:  Debug.Breakpoint,
                      Debug.Breakpoint.GhcFacade,
                      Debug.Breakpoint.TimerManager,

    -- Modules included in this library but not exported.
    other-modules: Debug.Breakpoint.Renamer,
                   Debug.Breakpoint.TypeChecker,
                   Debug.Breakpoint.TimerManager.Names

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >= 4.16.0.0 && < 4.21.0.0,
                      ghc >= 9.4.0 && < 9.11,
                      containers >= 0.6.5 && < 0.8,
                      mtl >= 2.2.2 && < 2.4,
                      transformers >= 0.5.6 && < 0.7,
                      haskeline >= 0.8.2 && < 0.9,
                      pretty-simple >= 4.1.2 && < 4.2,
                      text >= 1.2.5 && < 2.2,
                      template-haskell >= 2.18.0 && < 2.23,
                      ansi-terminal >= 1.0 && < 2.0,
                      deepseq >= 1.0 && < 1.6
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall
                 -Wno-unticked-promoted-constructors

test-suite spec
  main-is: Spec.hs
  other-modules: ApplicativeDo, OverloadedStrings
  hs-source-dirs: test
  build-depends: base, tasty, tasty-hunit, breakpoint, containers
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:
    -fplugin Debug.Breakpoint
    -Wno-x-partial
-- executable play
--   main-is: Main.hs
--   hs-source-dirs: play
--   build-depends: base, breakpoint
--   default-language: Haskell2010
